--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "lint": "eslint .",
+    "test": "node --test"
   },
   "author": "ACNQ",
   "license": "MIT",
