--- a/part4/bloglist/.env
+++ b/part4/bloglist/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://fanyuanhaotc:klxsx6258@cluster0.sxx9qcu.mongodb.net/bloglistApp?retryWrites=true&w=majority&appName=Cluster0"
 TEST_MONGODB_URI="mongodb+srv://fanyuanhaotc:klxsx6258@cluster0.sxx9qcu.mongodb.net/testBloglistApp?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3001
+SECRET="anystringisOK"
