--- a/part5/bloglist-backend/package.json
+++ b/part5/bloglist-backend/package.json
@@ -9,7 +9,8 @@
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "lint": "eslint .",
-    "test": "cross-env  NODE_ENV=test node --test"
+    "test": "cross-env  NODE_ENV=test node --test",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "ACNQ",
   "license": "MIT",
